# tyk-gateway-poc

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  tyk.standalone.conf  utils.py
auth-plugin/: login.py  manifest.json  middleware.py
