[tool.poetry]
name = "tyk-poc"
version = "0.1.0"
description = ""
authors = ["Lohanna Sarah <lohanna.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"
requests = "^2.28.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
